# Python-WebScraping-GeminiCLI

./: GEMINI.md  README.md  pyproject.toml
ssg_com/: agent_prd_scraping.md
ssg_com/data/: ssg_special_price.csv
starbucks_stores/: agent_prd_scraping.md  eda_analyzer.py  eda_report.md  starbucks_scraper.py
starbucks_stores/data/: starbucks_ai.csv
yes24/: agent_eda_yes24.md  agent_scraping.md  analysis_report.md  yes24_eda.py  yes24_scraper.py
yes24/data/: yes24_ai.csv
