[project]
name = "webscraping-gemini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "beautifulsoup4",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "koreanize-matplotlib",
    "loguru",
    "wordcloud",
    "setuptools>=82.0.0",
    "tabulate>=0.9.0",
]
